fix(form): update radio/checkbox spacing and color

--- a/src/components/formGroup/styles/vars/CdrFormGroup.vars.scss
+++ b/src/components/formGroup/styles/vars/CdrFormGroup.vars.scss
@@ -41,7 +41,6 @@
 }
 
 @mixin cdr-form-group-content-mixin() {
-  width: max-content;
   border-radius: $cdr-radius-softer;
   display: flex;
   flex-direction: column;
